# Polylines-Distance

./: .gitignore  CMakeLists.txt  README.md
include/: core_structs.h  distances.h  draw.h  frechet.h  hausdorff.h  metrics.h  read_write.h  split.h
src/: CMakeLists.txt  core_structs.h  distances.cpp  draw.cpp  draw.h  frechet.cpp  frechet.h  hausdorff.cpp  hausdorff.h  main.cpp  metrics.cpp  metrics.h  point.h  read.cpp  read.h  read_write.cpp  split.cpp  split.h  track.h  track_generator.cpp  track_generator.h  tracks_reader.cpp  tracks_reader.h
test/csv/: close_tracks.csv  rand_track.csv  two_rand_tracks.csv
